--- a/src/main/resources/com/sofoste/apspatientdata/PatientForm_de.properties
+++ b/src/main/resources/com/sofoste/apspatientdata/PatientForm_de.properties
@@ -5,11 +5,14 @@ allergy=Allergien
 medications=Medikamente
 familyHistory=Familiäre Krankengeschichte
 surgicalHistory=Operative Vorgeschichte
-submit=EINREICHEN
+submit=SPEICHERN
 qrCode=QR CODE
-exit=AUFGABE
+exit=SCHLIESSEN
 selectLanguage=SPRACHE WÄHLEN
 en=ENGLISCH
 de=DEUTSCH
 fr=FRANZÖSISCH
 es=SPANISCH
+formSubmissionTitle=Formular abgeschickt
+formSubmissionHeader=Danke!
+formSubmissionMessage=Ihre medizinischen Informationen wurden übermittelt.
