--- a/src/main/resources/com/sofoste/apspatientdata/PatientForm_en.properties
+++ b/src/main/resources/com/sofoste/apspatientdata/PatientForm_en.properties
@@ -13,3 +13,6 @@ en=ENGLISH
 de=GERMAN
 fr=FRENCH
 es=SPANISH
+formSubmissionTitle=Form Submission
+formSubmissionHeader=Thank You!
+formSubmissionMessage=Your medical information has been submitted.
