--- a/src/main/resources/com/sofoste/apspatientdata/PatientForm_es.properties
+++ b/src/main/resources/com/sofoste/apspatientdata/PatientForm_es.properties
@@ -13,4 +13,6 @@ en=INGLÉS
 de=ALEMÁN
 fr=FRANCÉS
 es=ESPAÑOL
-
+formSubmissionTitle=Envío de formulario
+formSubmissionHeader=¡Gracias!
+formSubmissionMessage=Se han enviado sus datos médicos.
