--- a/src/main/resources/com/sofoste/apspatientdata/PatientForm_fr.properties
+++ b/src/main/resources/com/sofoste/apspatientdata/PatientForm_fr.properties
@@ -5,11 +5,14 @@ allergy=Allergies
 medications=Médicaments
 familyHistory=Antécédents médicaux familiaux
 surgicalHistory=Antécédents chirurgicaux
-submit=SOUMETTRE
+submit=SAUVEGARDER
 qrCode=QR CODE
-exit=SORTIE
-selectLanguage=SÉLECTIONNER LA LANGUE
+exit=QUITTER
+selectLanguage=CHOIX DE LA LANGUE
 en=ANGLAIS
 de=ALLEMAND
 fr=FRANÇAIS
 es=ESPAGNOL
+formSubmissionTitle=Soumission de formulaire
+formSubmissionHeader=Merci!
+formSubmissionMessage=Vos informations médicales ont été soumises.
